<resources>
    <string name="app_name">Netflix</string>
    <string name="menu_item_home">Inicio</string>
    <string name="menu_item_new">Nuevo y popular</string>
    <string name="app_http_timeout">Tiempo de espera agotado.</string>
    <string name="app_http_unable_to_connect">No se pudo establecer conexión.</string>
    <string name="app_http_verify_connection">Verifique la conexión a internet.</string>
    <string name="app_http_json_error">No se puede interpretar la respuesta del servidor.</string>
    <string name="app_http_unknown_error">Ha ocurrido un error de comunicación.</string>
    <string name="app_http_session_expired">Por favor inicia sesión.</string>
    <string name="app_http_rest_error_in_the_request">Error en la solicitud.</string>
    <string name="app_http_rest_internal_error_in_the_server">Error interno en el servidor.</string>
    <string name="app_http_rest_server_could_not_be_found">No se pudo encontrar el servidor para la solicitud.</string>
    <string name="app_http_rest_could_not_find_secure_server">Certificado no identificado para la solicitud.</string>
    <string name="menu_item_laugh">Para reir</string>
    <string name="menu_item_search">Buscar</string>
    <string name="menu_item_download">Descargas</string>
    <string name="home_my_list">Mi lista</string>
    <string name="home_info">Info</string>
    <string name="home_banner_description">Crimenes reales</string>
    <string name="home_banner_play">Reproducir</string>
    <string name="home_banner_series">Series</string>
    <string name="home_banner_movies">Peliculas</string>
    <string name="home_banner_categories">Categorias</string>
    <string name="home_movie_and_series">Peliculas y Series</string>
    <string name="serie_advance">Avance</string>
    <string name="serie_name">Fazar</string>
    <string name="serie_coincidence">98% de coincidencia</string>
    <string name="serie_year">2020</string>
    <string name="serie_rating">13+</string>
    <string name="serie_resolution">HD</string>
    <string name="serie_play">Reproducir</string>
    <string name="serie_dowload">Descargar</string>
    <string name="serie_synopsis">Después de haber estado desaparecido durante casi 20 años, Rick Sánchez llega de imprevisto a la puerta de la casa de su hija Beth y se va a vivir con ella y su familia utilizando el garaje como su laboratorio</string>
    <string name="serie_cast">Elenco: David Katy, Jerry Mirror, David Katy, Jerry Mirror, Elenco: David Katy, Jerry Mirror</string>
    <string name="season_name">Temporada 1</string>
    <string name="episode_description">Después de haber estado desaparecido durante casi 20 años, Rick Sánchez llega de imprevisto a la puerta de la casa de su hija Beth y se va a vivir con ella y su familia utilizando el garaje como su laboratorio</string>
    <string name="episode_name">2. Episodio 2</string>
    <string name="episode_duration">24 min</string>
    <string name="welcome_privacy">Privacidad</string>
    <string name="welcome_login">Inicia sesión</string>
    <string name="welcome_join">netflix.com/join</string>
    <string name="login_help">Ayuda</string>
    <string name="login_email">Email o número de telefono</string>
    <string name="login_password">Contraseña</string>
    <string name="welcome_item_title">Peliculas y series\n ilimitadas y mucho más.</string>
    <string name="welcome_item_description">Disfruta donde quieras. Cancela\n cuando quieras. Toca el enlace de\n abajo para suscribirte.</string>
    <string name="login_button_login">Inicia sesión</string>
    <string name="login_recover_password">Recuperar contraseña</string>
    <string name="login_disclaimer">El inicio de sesión está protegido por Google reCAPCHA para comprobar que no eres un robot. Más info.</string>
    <string name="serie_my_list">Mi lista</string>
    <string name="serie_like">Calificar</string>
    <string name="serie_share">Compartir</string>
    <string name="serie_seasons_count">10 temporadas</string>
</resources>