<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <RelativeLayout
            android:id="@+id/contentPlayerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.media3.ui.PlayerView
                android:id="@+id/playerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:show_fastforward_button="false"
                app:show_next_button="false"
                app:show_previous_button="false"
                app:show_rewind_button="false"
                app:use_controller="false" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/linearProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:indeterminate="false"
                app:indicatorColor="@color/red"
                app:trackColor="@color/white_transparent_30"
                tools:progress="70"/>

            <RelativeLayout
                android:id="@+id/loadingPlayerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/thumbnailImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@drawable/ic_thumbnail_player" />

                <LinearLayout
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/shape_player_circle"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/ic_play_arrow_24dp"
                        app:tint="@color/white"/>

                </LinearLayout>

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/circularProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:indeterminate="true"
                    app:indicatorColor="@color/red"
                    app:indicatorSize="68dp"
                    app:trackColor="@color/white_transparent_30"
                    app:trackThickness="3dp"
                    tools:indeterminate="false"
                    tools:progress="50"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toStartOf="@+id/closeView"
                android:background="@drawable/shape_player_circle">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:srcCompat="@drawable/ic_cast_48dp"
                    app:tint="@color/white"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/closeView"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/shape_player_circle">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerInParent="true"
                    app:srcCompat="@drawable/ic_close_48dp"
                    app:tint="@color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/volumeView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="25dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/shape_player_circle">

                <ImageView
                    android:id="@+id/volumeImageView"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    app:srcCompat="@drawable/ic_volume_off_48dp"
                    app:tint="@color/white"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/netflix_sans_bold"
                android:shadowColor="@color/black"
                android:shadowRadius="8"
                android:text="@string/serie_advance"
                android:textColor="@color/white"
                android:textSize="14sp"/>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/netflix_sans_bold"
                tools:text="@string/serie_name"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/coincidenceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/netflix_sans_regular"
                    android:textColor="@color/green"
                    android:textSize="15sp"
                    tools:text="@string/serie_coincidence" />

                <TextView
                    android:id="@+id/yearTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/coincidenceTextView"
                    android:fontFamily="@font/netflix_sans_regular"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    tools:text="@string/serie_year" />

                <LinearLayout
                    android:id="@+id/ratingView"
                    android:layout_width="25dp"
                    android:layout_height="17dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@+id/yearTextView"
                    android:background="@drawable/shape_serie_year"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/ratingTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/netflix_sans_regular"
                        android:includeFontPadding="false"
                        android:textSize="9sp"
                        android:textColor="@color/white"
                        tools:text="@string/serie_rating"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/seasonsCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/ratingView"
                    android:fontFamily="@font/netflix_sans_regular"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    tools:text="@string/serie_seasons_count" />

                <LinearLayout
                    android:id="@+id/resolutionView"
                    android:layout_width="25dp"
                    android:layout_height="17dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@+id/seasonsCountTextView"
                    android:background="@drawable/shape_serie_definition"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/resolutionTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/netflix_sans_regular"
                        android:includeFontPadding="false"
                        android:textSize="9sp"
                        android:textColor="@color/white"
                        tools:text="@string/serie_resolution"/>

                </LinearLayout>

            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/playButton"
                style="@style/Theme.WhiteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxHeight="52dp"
                android:minHeight="52dp"
                android:text="@string/serie_play"
                app:icon="@drawable/ic_play_arrow_24dp"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="30dp"
                app:iconTint="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/playDownload"
                style="@style/Theme.GrayDarkButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:maxHeight="52dp"
                android:minHeight="52dp"
                android:text="@string/serie_dowload"
                app:icon="@drawable/ic_download_24dp"
                app:iconGravity="textStart"
                app:iconPadding="5dp"
                app:iconSize="18dp"
                app:iconTint="@color/white"/>

            <TextView
                android:id="@+id/synopsisTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/netflix_sans_regular"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:text="@string/serie_synopsis"/>

            <TextView
                android:id="@+id/castTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/netflix_sans_regular"
                android:textColor="@color/gray_231"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="14sp"
                tools:text="@string/serie_cast"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/netflix_sans_regular"
                    android:maxHeight="70dp"
                    android:minHeight="70dp"
                    android:text="@string/serie_my_list"
                    android:textSize="12sp"
                    android:textAllCaps="false"
                    android:textColor="@color/gray_231"
                    app:icon="@drawable/ic_add_48dp"
                    app:iconGravity="top"
                    app:iconPadding="0dp"
                    app:iconSize="30dp"
                    app:iconTint="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/netflix_sans_regular"
                    android:maxHeight="70dp"
                    android:minHeight="70dp"
                    android:text="@string/serie_like"
                    android:textSize="12sp"
                    android:textAllCaps="false"
                    android:textColor="@color/gray_231"
                    app:icon="@drawable/ic_like_48dp"
                    app:iconGravity="top"
                    app:iconPadding="0dp"
                    app:iconSize="30dp"
                    app:iconTint="@color/white" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/netflix_sans_regular"
                    android:maxHeight="70dp"
                    android:minHeight="70dp"
                    android:text="@string/serie_share"
                    android:textSize="12sp"
                    android:textAllCaps="false"
                    android:textColor="@color/gray_231"
                    app:icon="@drawable/ic_send_48dp"
                    app:iconGravity="top"
                    app:iconPadding="0dp"
                    app:iconSize="30dp"
                    app:iconTint="@color/white" />
            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                style="@style/Theme.TabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-10dp"
                android:layout_marginEnd="-10dp"
                android:layout_marginTop="15dp"
                android:background="@color/transparent"
                app:tabGravity="fill"
                app:tabIndicatorColor="@color/red"
                app:tabIndicatorFullWidth="false"
                app:tabIndicatorGravity="top"
                app:tabIndicatorHeight="4dp"
                app:tabMode="scrollable"
                app:tabSelectedTextColor="@color/white"
                app:tabTextColor="@color/gray_231"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>