<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.login.LoginActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/backImageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_arrow_back_ios_24dp"
                app:tint="@color/white" />

            <ImageView
                android:layout_width="65dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/ic_logo_name_netflix" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/netflix_sans_medium"
                android:text="@string/login_help"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </RelativeLayout>

    </Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@color/cod_gray"/>

    <LinearLayout
        android:id="@+id/formView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/silver"
                app:boxBackgroundColor="@color/mine_shaft"
                app:boxStrokeColor="@color/mine_shaft"
                app:hintTextAppearance="@style/ThemeLoginHintTextColor"
                app:hintTextColor="@color/silver">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/netflix_sans_regular"
                    android:hint="@string/login_email"
                    android:inputType="textEmailAddress"
                    android:maxHeight="50dp"
                    android:minHeight="50dp"
                    android:paddingBottom="4dp"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@color/white"
                    android:text="haag.tod@example.net"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/silver"
                app:boxBackgroundColor="@color/mine_shaft"
                app:boxStrokeColor="@color/mine_shaft"
                app:hintTextAppearance="@style/ThemeLoginHintTextColor"
                app:hintTextColor="@color/silver">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/netflix_sans_regular"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:maxHeight="50dp"
                    android:minHeight="50dp"
                    android:paddingBottom="4dp"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@color/white"
                    android:text="123456"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                style="@style/Theme.LoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:enabled="false"
                android:maxHeight="54dp"
                android:minHeight="54dp"
                android:text="@string/login_button_login" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_below="@+id/formView">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_recover_password"
                android:textColor="@color/silver"
                android:fontFamily="@font/netflix_sans_medium"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginTop="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_disclaimer"
                android:textColor="@color/silver"
                android:fontFamily="@font/netflix_sans_regular"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginTop="30dp"/>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>