<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.welcome.WelcomeActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
        android:id="@+id/dotsIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/webButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        app:dotsColor="@color/red"
        app:dotsStrokeColor="@color/gray_231"
        app:dotsSize="8dp"
        app:dotsSpacing="4dp"
        app:dotsStrokeWidth="4dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/webButton"
        style="@style/Theme.RedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:maxHeight="52dp"
        android:minHeight="52dp"
        android:text="@string/welcome_join"
        android:textSize="14sp"
        android:fontFamily="@font/netflix_sans_regular"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="48dp"
                app:srcCompat="@drawable/ic_logo_name_netflix"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_privacy"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/netflix_sans_regular"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/loginTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_login"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/netflix_sans_regular"
                    android:textSize="14sp"/>

            </LinearLayout>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>
</RelativeLayout>